CCN page: overall layout; added design process content

--- a/ccn.html
+++ b/ccn.html
@@ -30,55 +30,42 @@
         <div class="portfolio-ccn-intro">
             <h2 class="portfolio-ccn-title"><span class="portfolio-ccn-title-emphasis">CASE STUDY:</span> Call Congress Now</h2>
             <p class="portfolio-ccn-intro-blurb">Call Congress Now is a responsive web app I designed and co-developed. Its purpose is to encourage citizens to call their Representatives and Senators for issues they care about. The app provides calling information in a user-friendly way. </p>
+            <a class="portfolio-ccn-link" href="https://www.callcongressnow.org/" rel="link to Call Congress Now" target="_blank">
+                <img class="portfolio-ccn-screenshot" src="images/ccn-screenshot.png" alt="call congress now" />
+            </a>
         </div>
-        <a class="portfolio-ccn-link" href="https://www.callcongressnow.org/" rel="link to Call Congress Now" target="_blank">
-            <img class="portfolio-ccn-screenshot" src="images/ccn-screenshot.png" alt="call congress now" />
-        </a>
-        <div class="portfolio-ccn-row">
-            <h3 class="portfolio-ccn-intro-header">The Design Process: Key Steps</h3>
-            <p class="portfolio-ccn-intro-blurb">Call Congress Now was a challenging but rewarding app to design and build. I have included key points in the design process below.</p>
-        </div>
-        <div class="portfolio-ccn-row">
-            <div class="portfolio-ccn-column">
-                <h3 class="portfolio-ccn-header">Discovery</h3>
-            </div>
-            <div class="portfolio-ccn-column">
-                <p class="portfolio-ccn-blurb">In the weeks following election night, I vowed to get more involved in politics. As I talked with like-minded peers and nodded along as I read rant-filled threads, I started wondering what else I could do besides vote in the next election.</p>
-                <p class="portfolio-ccn-blurb">I came across long Twitter threads about the impact of picking up the phone and calling Congress. My friend and I were intrigued. We started looking into how to contact Congress were startled by how little information about it existed. Then we realized that we could do something about that.</p>
-            </div>
-        </div>
-        <div class="portfolio-ccn-row">
-            <div class="portfolio-ccn-column">
-                <h3 class="portfolio-ccn-header">Ideation</h3>
-            </div>
-            <div class="portfolio-ccn-column">
-                <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following questions:</p>
-                <p class="portfolio-ccn-blurb">What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
-            </div>
-        </div>
-        <div class="portfolio-ccn-row">
-            <div class="portfolio-ccn-column">
-                <h3 class="portfolio-ccn-header">Design</h3>
-            </div>
-            <div class="portfolio-ccn-column">
-            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
-            </div>
-        </div>
-        <div class="portfolio-ccn-row">
-            <div class="portfolio-ccn-column">
-                <h3 class="portfolio-ccn-header">Develop</h3>
-            </div>
-            <div class="portfolio-ccn-column">
-            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
-            </div>
-        </div>
-        <div class="portfolio-ccn-row">
-            <div class="portfolio-ccn-column">
-                <h3 class="portfolio-ccn-header">Test</h3>
-            </div>
-            <div class="portfolio-ccn-column">
-            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
-            </div>
+        <div class="portfolio-ccn-process">
+            <h3 class="portfolio-ccn-process-title">The Design Process: Key Steps</h3>
+            <p class="portfolio-ccn-process-blurb">Call Congress Now was a challenging but rewarding app to design and build. I have included key points in the design process below.</p>
+            <h3 class="portfolio-ccn-process-header">Discovery</h3>
+            <p class="portfolio-ccn-process-blurb">In the weeks following election night, I vowed to get more involved in politics. I came across long Twitter threads about the impact of picking up the phone and calling Congress.</p>
+            <p class="portfolio-ccn-process-blurb">My friend and I started looking into how to go about contacting Congress. We were startled by how little information about it existed. Then we realized that we could do something about that.</p>
+            <h3 class="portfolio-ccn-process-header">Defining The Idea</h3>
+            <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">We decided to make a responsive web app that would provide a solution to the following questions:</p>
+            <ul class="portfolio-ccn-process-list">
+                <li class="portfolio-ccn-process-list-item">What would a user-friendly app with calling information look like?</li>
+                <li class="portfolio-ccn-process-list-item">How do we motivate our peers to pick up the phone?</li>
+                <li class="portfolio-ccn-process-list-item">Here is a storyboard I created by hand to help define the types of users our app was targeting:</li>
+            </ul>
+            <img class="portfolio-ccn-process-img" src="images/ccn-storyboard.png" alt="storyboard" />
+            <h3 class="portfolio-ccn-process-header">Design</h3>
+            <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">During the design phase, I created the following:</p>
+            <ul class="portfolio-ccn-process-list">
+                <li class="portfolio-ccn-process-list-item">Quick paper/pencil wireframes</li>
+                <li class="portfolio-ccn-process-list-item">High-fidelity mockups using Adobe Illustrator</li>
+                <li class="portfolio-ccn-process-list-item">HTML/SCSS prototypes</li>
+                <li class="portfolio-ccn-process-list-item">Branding, such as defining the color scheme, finding a background hero photo, and sketching out an icon (which was inspired by the upside-down flag from House of Cards).</li>
+            </ul>
+            <img class="portfolio-ccn-process-design-img" src="images/call-congress-now.svg" alt="Call Congress Now icon" />
+            <h3 class="portfolio-ccn-process-header">User Research</h3>
+            <p class="portfolio-ccn-process-blurb">While designing, I conducted informal interviews with family, friends, and friendly-looking strangers at coffee shops. I wanted to know what motivated them to care about politics, but, like me prior to the election, stopped them from getting more involved.</p>
+            <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">Here was the general consensus:</p>
+            <ul class="portfolio-ccn-process-list">
+                <li class="portfolio-ccn-process-list-item">I don&rsquo;t know what specific actions I can take besides voting and donating to causes I care about</li>
+                <li class="portfolio-ccn-process-list-item">I only want to consider options that aren&rsquo;t a huge time sink</li>
+                <li class="portfolio-ccn-process-list-item">I want to know that my actions will mean something</li>
+            </ul>
+            <p class="portfolio-ccn-process-blurb"><span class="portfolio-ccn-process-blurb-emphasis">Conclusion: </span>Answer the question, Why should I do this? </p>
         </div>
 
     </section>
