--- a/ccn.html
+++ b/ccn.html
@@ -39,7 +39,7 @@
             <p class="portfolio-ccn-process-blurb">Call Congress Now was a challenging but rewarding app to design and build. I have included key points in the design process below.</p>
             <h3 class="portfolio-ccn-process-header">Discovery</h3>
             <p class="portfolio-ccn-process-blurb">In the weeks following election night, I vowed to get more involved in politics. I came across long Twitter threads about the impact of picking up the phone and calling Congress.</p>
-            <p class="portfolio-ccn-process-blurb">My friend and I started looking into how to go about contacting Congress. We were startled by how little information about it existed. Then we realized that we could do something about that.</p>
+            <p class="portfolio-ccn-process-blurb">My friend and I started looking into how to go about contacting Congress. We were startled by how little information about it existed at the time. Then we realized we could change that.</p>
             <h3 class="portfolio-ccn-process-header">Defining The Idea</h3>
             <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">We decided to make a responsive web app that would provide a solution to the following questions:</p>
             <ul class="portfolio-ccn-process-list">
@@ -48,6 +48,16 @@
                 <li class="portfolio-ccn-process-list-item">Here is a storyboard I created by hand to help define the types of users our app was targeting:</li>
             </ul>
             <img class="portfolio-ccn-process-img" src="images/ccn-storyboard.png" alt="storyboard" />
+            <h3 class="portfolio-ccn-process-header">User Research</h3>
+            <p class="portfolio-ccn-process-blurb">While designing, I conducted informal interviews with family, friends, and friendly-looking strangers at coffee shops. I wanted to know what motivated them to care about politics, but, similiar to me prior to the election, stopped them from getting more involved.</p>
+            <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">Here was the general consensus:</p>
+            <ul class="portfolio-ccn-process-list">
+                <li class="portfolio-ccn-process-list-item">&ldquo;I don&rsquo;t know what specific actions I can take besides voting and donating to causes I care about&rdquo;</li>
+                <li class="portfolio-ccn-process-list-item">&ldquo;I only want to consider options that aren&rsquo;t a huge time sink&rdquo;</li>
+                <li class="portfolio-ccn-process-list-item">&ldquo;I want to know that my actions will mean something&rdquo;</li>
+            </ul>
+            <p class="portfolio-ccn-process-blurb"><span class="portfolio-ccn-process-blurb-emphasis">Conclusion: </span>A lot of people wanted to get more involved, but they needed more information. We realized that it wouldn&rsquo;t be enough to just build functionality to easily find phone numbers. We also needed to include resources to answer the question, &ldquo;Why should I do this?&rdquo;</p>
+
             <h3 class="portfolio-ccn-process-header">Design</h3>
             <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">During the design phase, I created the following:</p>
             <ul class="portfolio-ccn-process-list">
@@ -56,16 +66,28 @@
                 <li class="portfolio-ccn-process-list-item">HTML/SCSS prototypes</li>
                 <li class="portfolio-ccn-process-list-item">Branding, such as defining the color scheme, finding a background hero photo, and sketching out an icon (which was inspired by the upside-down flag from House of Cards).</li>
             </ul>
-            <img class="portfolio-ccn-process-design-img" src="images/call-congress-now.svg" alt="Call Congress Now icon" />
-            <h3 class="portfolio-ccn-process-header">User Research</h3>
-            <p class="portfolio-ccn-process-blurb">While designing, I conducted informal interviews with family, friends, and friendly-looking strangers at coffee shops. I wanted to know what motivated them to care about politics, but, like me prior to the election, stopped them from getting more involved.</p>
-            <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">Here was the general consensus:</p>
-            <ul class="portfolio-ccn-process-list">
-                <li class="portfolio-ccn-process-list-item">I don&rsquo;t know what specific actions I can take besides voting and donating to causes I care about</li>
-                <li class="portfolio-ccn-process-list-item">I only want to consider options that aren&rsquo;t a huge time sink</li>
-                <li class="portfolio-ccn-process-list-item">I want to know that my actions will mean something</li>
-            </ul>
-            <p class="portfolio-ccn-process-blurb"><span class="portfolio-ccn-process-blurb-emphasis">Conclusion: </span>Answer the question, Why should I do this? </p>
+            <div class="portfolio-ccn-process-design-visuals">
+                <div class="portfolio-ccn-process-design-visuals-column">
+                    <h4 class="portfolio-ccn-process-design-visuals-header">color pallete</h4>
+                    <div class="portfolio-ccn-process-color-swatches">
+                        <div class="portfolio-ccn-process-color color-1"></div>
+                        <div class="portfolio-ccn-process-color color-2"></div>
+                    </div>
+                    <div class="portfolio-ccn-process-color-swatches">
+                        <div class="portfolio-ccn-process-color color-3"></div>
+                        <div class="portfolio-ccn-process-color color-4"></div>
+                    </div>
+                </div>
+                <div class="portfolio-ccn-process-design-visuals-column">
+                    <h4 class="portfolio-ccn-process-design-visuals-header">hero image</h4>
+                    <img class="portfolio-ccn-process-design-img" src="images/capitol-bg.jpg" alt="Capitol BG" />
+                    <h4 class="portfolio-ccn-process-capitol-bg-subtitle">Source: Wikipedia</h4>
+                </div>
+                 <div class="portfolio-ccn-process-design-visuals-column">
+                    <h4 class="portfolio-ccn-process-design-visuals-header">icon</h4>
+                    <img class="portfolio-ccn-process-design-img" src="images/call-congress-now.svg" alt="Call Congress Now icon" />
+                </div>
+            </div>
         </div>
 
     </section>
