CCN process: added remaining content sections

--- a/ccn.html
+++ b/ccn.html
@@ -49,7 +49,7 @@
             </ul>
             <img class="portfolio-ccn-process-img" src="images/ccn-storyboard.png" alt="storyboard" />
             <h3 class="portfolio-ccn-process-header">User Research</h3>
-            <p class="portfolio-ccn-process-blurb">While designing, I conducted informal interviews with family, friends, and friendly-looking strangers at coffee shops. I wanted to know what motivated them to care about politics, but, similiar to me prior to the election, stopped them from getting more involved.</p>
+            <p class="portfolio-ccn-process-blurb">While designing, I conducted informal interviews with family, friends, and friendly-looking strangers at coffee shops. I wanted to know what motivated them to care about politics, but, similar to me prior to the election, stopped them from getting more involved.</p>
             <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">Here was the general consensus:</p>
             <ul class="portfolio-ccn-process-list">
                 <li class="portfolio-ccn-process-list-item">&ldquo;I don&rsquo;t know what specific actions I can take besides voting and donating to causes I care about&rdquo;</li>
@@ -68,7 +68,7 @@
             </ul>
             <div class="portfolio-ccn-process-design-visuals">
                 <div class="portfolio-ccn-process-design-visuals-column">
-                    <h4 class="portfolio-ccn-process-design-visuals-header">color pallete</h4>
+                    <h4 class="portfolio-ccn-process-design-visuals-header">color palette</h4>
                     <div class="portfolio-ccn-process-color-swatches">
                         <div class="portfolio-ccn-process-color color-1"></div>
                         <div class="portfolio-ccn-process-color color-2"></div>
@@ -88,15 +88,32 @@
                     <img class="portfolio-ccn-process-design-img" src="images/call-congress-now.svg" alt="Call Congress Now icon" />
                 </div>
             </div>
+            <h3 class="portfolio-ccn-process-header">Development &amp; Testing</h3>
+            <p class="portfolio-ccn-process-blurb">During the development phase, I continued to work on the HTML/SCSS, including media queries to make the site mobile-friendly. I relied on my back-end-savvy friend to hook up the front-end with the back-end and to set up Google Analytics.</p>
+            <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">Here is what we are tracking in Google Analytics:</p>
+            <ul class="portfolio-ccn-process-list">
+                <li class="portfolio-ccn-process-list-item">January Page views: 775</li>
+                <li class="portfolio-ccn-process-list-item">January Bounce rate: 70%</li>
+            </ul>
+            <h3 class="portfolio-ccn-process-header">Next Steps</h3>
+            <p class="portfolio-ccn-process-blurb"><span class="portfolio-ccn-process-blurb-emphasis">Analytics Results: </span>Google Analytics is telling us that we still don&rsquo;t have enough traffic to the site overall, as indicated by our dismal number of Page Views. Additionally, our average bounce rate in January was also terrible, which means we need to do more content work.</p>
+            <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">Here is our tentative plan:</p>
+            <ul class="portfolio-ccn-process-list">
+                <li class="portfolio-ccn-process-list-item">Add more resource links; re-design resource section</li>
+                <li class="portfolio-ccn-process-list-item">De-emphasize memes</li>
+                <li class="portfolio-ccn-process-list-item">Add district numbers for Senators and Representatives (this is something that could differentiate us from similar sites)</li>
+                <li class="portfolio-ccn-process-list-item">Add social media links to footer; make a plan for increasing social media outreach</li>
+            </ul>
         </div>
+
 
     </section>
 
     <footer class="portfolio-footer" id="about">
         <section class="portfolio-footer-about">
             <h3 class="portfolio-footer-about-title">ABOUT ANDREA</h3>
-            <p class="portfolio-footer-about-blurb ">I am a UX/UI Designer in Cambridge, MA. Graffiti alley, picture above, is a beloved place of mine in Central Square. It is always changing, just like design.</p>
-            <p class="portfolio-footer-about-blurb ">I enjoy solving complex design problems and thrive on teamwork. I have experience with education and healthcare startups and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
+            <p class="portfolio-footer-about-blurb">I am a UX/UI Designer in Cambridge, MA. Graffiti alley, picture above, is a beloved place of mine in Central Square. It is always changing, just like design.</p>
+            <p class="portfolio-footer-about-blurb">I enjoy solving complex design problems and thrive on teamwork. I have experience with education and healthcare startups and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
         </section>
         <section class="portfolio-footer-contact">
             <div class="portfolio-footer-social-media">
