Update to main portfolio page

--- a/process.html
+++ b/process.html
@@ -17,16 +17,16 @@
 
     <nav class="portfolio-nav">
         <section class="portfolio-nav-left-side">
-            <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
+            <a href="index.html" rel="home page"><h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1></a>
             <img class="portfolio-nav-title" src="images/about-me.gif" alt="about me" />
         </section>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">ABOUT/CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html#portfolio">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html#about">ABOUT/CONTACT</a>
         </div>
     </nav>
 
-    <section class="portfolio-process-body">
+    <section class="portfolio-process-body" id="design-process-body">
         <div class="portfolio-process-intro">
             <h2 class="portfolio-process-title"><span class="portfolio-process-title-emphasis">DESIGN PROCESS:</span> Key Steps</h2>
            <p class="portfolio-process-blurb-intro">The following describes key steps in my design process. It works best when I collaborate closely with others. Although the steps are presented here sequentially, I find that the design process is rarely linear. Sometimes elements in a step are skipped or iterated multiple times.</p>
