--- a/ccn.html
+++ b/ccn.html
@@ -17,7 +17,7 @@
 
     <nav class="portfolio-nav">
         <section class="portfolio-nav-left-side">
-            <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
+            <a href="index.html" rel="home page"><h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1></a>
             <img class="portfolio-nav-title" src="images/about-me.gif" alt="about me" />
         </section>
         <div class="portfolio-nav-links">
@@ -26,7 +26,7 @@
         </div>
     </nav>
 
-    <section class="portfolio-ccn-body">
+    <section class="portfolio-ccn-body" id="ccn-process-body">
         <div class="portfolio-ccn-intro">
             <h2 class="portfolio-ccn-title"><span class="portfolio-ccn-title-emphasis">CASE STUDY:</span> Call Congress Now</h2>
             <p class="portfolio-ccn-intro-blurb">Call Congress Now is a responsive web app I designed and co-developed. Its purpose is to encourage citizens to call their Representatives and Senators for issues they care about. The app provides calling information in a user-friendly way. </p>
@@ -92,11 +92,11 @@
             <p class="portfolio-ccn-process-blurb">During the development phase, I continued to work on the HTML/SCSS, including media queries to make the site mobile-friendly. I relied on my back-end-savvy friend to hook up the front-end with the back-end and to set up Google Analytics.</p>
             <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">Here is what we are tracking in Google Analytics:</p>
             <ul class="portfolio-ccn-process-list">
-                <li class="portfolio-ccn-process-list-item">January Page views: 775</li>
-                <li class="portfolio-ccn-process-list-item">January Bounce rate: 70%</li>
+                <li class="portfolio-ccn-process-list-item">January Page Views: 775</li>
+                <li class="portfolio-ccn-process-list-item">January Bounce Rate: 70%</li>
             </ul>
             <h3 class="portfolio-ccn-process-header">Next Steps</h3>
-            <p class="portfolio-ccn-process-blurb"><span class="portfolio-ccn-process-blurb-emphasis">Analytics Results: </span>Google Analytics is telling us that we still don&rsquo;t have enough traffic to the site overall, as indicated by our dismal number of Page Views. Additionally, our average bounce rate in January was also terrible, which means we need to do more content work.</p>
+            <p class="portfolio-ccn-process-blurb"><span class="portfolio-ccn-process-blurb-emphasis">Analytics Results: </span>Google Analytics is telling us that we still don&rsquo;t have enough traffic to the site overall, as indicated by our dismal number of Page Views. Additionally, our average Bounce Rate in January was also terrible, which means we need to do more content work.</p>
             <p class="portfolio-ccn-process-blurb portfolio-ccn-process-blurb-emphasis">Here is our tentative plan:</p>
             <ul class="portfolio-ccn-process-list">
                 <li class="portfolio-ccn-process-list-item">Add more resource links; re-design resource section</li>
@@ -105,8 +105,6 @@
                 <li class="portfolio-ccn-process-list-item">Add social media links to footer; make a plan for increasing social media outreach</li>
             </ul>
         </div>
-
-
     </section>
 
     <footer class="portfolio-footer" id="about">
