Few more minor changes to portfolio page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="portfolio">
 
-    <nav class="portfolio-nav">
+    <nav class="portfolio-nav home-nav">
         <section class="portfolio-nav-left-side">
             <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
             <img class="portfolio-nav-title" src="images/about-me.gif" alt="about me" />
