Update temp callcongress url

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <p class="portfolio-modal-paragraph">Call Congress Now is a responsive web app I designed and co-developed. The purpose of the application is to encourage citizens to call their Representatives and Senators by providing calling information in a user-friendly way.</p>
                     <p class="portfolio-modal-paragraph">The icon I created for Call Congress Now was inspired by the upside down flag on House of Cards. It was created using Adobe Illustrator.</p>
                     <a class="portfolio-modal-link" href="ccn.html#ccn-process-body">Design Process: Call Congress Now</a>
-                    <a class="portfolio-modal-link" href="https://www.callcongressnow.org/">Visit Website</a>
+                    <a class="portfolio-modal-link" href="https://call-congress-now.herokuapp.com/">Visit Website</a>
                  </div>
             </div>
         </div>
