trinetx portfolio blurb

--- a/index.html
+++ b/index.html
@@ -26,6 +26,25 @@
 
     <section class="portfolio-body" id="portfolio">
         <div class="portfolio-row">
+            <button class="portfolio-icon">
+                    <img class="portfolio-icon-image" src="images/trinetx-logo.png" alt="call congress now preview" />
+                    <h2 class="portfolio-icon-title">Projects from TriNetX, Inc.</h2>
+            </button>
+            <div class="portfolio-modal">
+                <div class="portfolio-modal-content">
+                    <div class="portfolio-modal-header">
+                        <h3>Projects from TriNetX, Inc.</h3>
+                        <span class="portfolio-modal-close-icon">&times;</span>
+                    </div>
+                    <div class="portfolio-modal-body">
+                        <img style="padding-bottom: 20px;" src="images/trinetx-logo.png" alt="trinetx logo" />
+                        <p class="portfolio-modal-paragraph">I am currently working as a contract UX/UI designer at a B2B healthcare startup in Cambridge, MA. I am focused on creating wireframes, pixel-perfect mockups, and interactive prototypes for their web app redesign.</p>
+                        <p class="portfolio-modal-paragraph">I work closely with the product team to push for more user research and testing in order to make more informed design decisions, and I continue to evolve and standardize their style guide and UI. I also work with complicated data sets and logic interactions, and I strive to use mock data that is representative of real data in my designs.</p>
+                        <p class="portfolio-modal-paragraph">I am not able to share my work from TriNetX publicly, but I would be happy to explore it in a controlled interview setting.</p>
+                    </div>
+                </div>
+            </div>
+
             <button class="portfolio-icon"><a href="process.html#design-process-body" rel="portfolio-design-process">
                 <img class="portfolio-icon-image" src="images/design-design.png" alt="design process preview" />
                 <h2 class="portfolio-icon-title">Design Process:<br>Overview</h2>
