Starting new portfolio page

--- a/ccn.html
+++ b/ccn.html
@@ -11,18 +11,15 @@
     <link rel="icon" type="image/png" href="images/portfolio-icon.png" />
 </head>
 
-</html>
-
 <body class="portfolio">
 
-    <nav class="portfolio-nav">
-        <section class="portfolio-nav-left-side">
-            <a href="index.html" rel="home page"><h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1></a>
-            <img class="portfolio-nav-title" src="images/about-me.gif" alt="about me" />
-        </section>
+    <nav class="portfolio-nav home-nav">
+        <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">ABOUT</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">ABOUT/CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">DESIGN PHILOSOPHY</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">CONTACT</a>
         </div>
     </nav>
 
@@ -127,3 +124,6 @@
     <script>smoothScroll.init();</script>
 
 </body>
+
+</html>
+
