--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
         <div class="portfolio-nav-links">
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">ABOUT</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">DESIGN PHILOSOPHY</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">CONTACT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#design-philsophy">DESIGN PHILOSOPHY</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
-    <section class="portfolio-about">
-    <p class="portfolio-about-blurb">Andrea is a UX/UI designer in the Greater Boston Area.</p>
-    <p class="portfolio-about-blurb">Her work experience includes designing for B2B and B2C web products within education and healthcare startups. She previously worked in healthcare and learned a lot about humans. <a class="portfolio-about-resume-link" href="#">Download Resume</a></p>
+
+    <section id="about" class="portfolio-about">
+    <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">I am a UX/UI designer</span> in the Greater Boston Area.</p>
+    <p class="portfolio-about-blurb">My work experience includes designing for B2B and B2C web products within education and healthcare startups.<br>I previously worked in healthcare and learned a lot about humans. <a class="portfolio-about-resume-link" href="#">Download Resume</a></p>
     </section>
 
     <section class="portfolio-portfolio">
@@ -36,23 +37,23 @@
                 </a></button>
             </div>
             <div class="portfolio-portfolio-column">
-                <h2 class="portfolio-portfolio-header">View selected works from Andrea&rsquo;s portfolio:</h2>
+                <h2 class="portfolio-portfolio-header">Portfolio</h2>
+                <p class="portfolio-portfolio-blurb">My portfolio contains pieces from my experience at education and healthcare startups as well as open source projects.</p>
                 <ul class="portfolio-portfolio-list">
-                    <li class="portfolio-portfolio-list-item">B2C education products</li>
-                    <li class="portfolio-portfolio-list-item">B2B healthcare clinical trial products</li>
+                    <li class="portfolio-portfolio-list-item">B2C education product design</li>
+                    <li class="portfolio-portfolio-list-item">B2B healthcare clinical trial product design</li>
                     <li class="portfolio-portfolio-list-item">Web-based applications</li>
                     <li class="portfolio-portfolio-list-item">Marketing websites and related deliverables</li>
-                    <li class="portfolio-portfolio-list-item">Responsive small business websites</li>
-                    <li>Open source projects</li>
+                    <li class="portfolio-portfolio-list-item">Open source projects</li>
                 </ul>
             </div>
         </div>
     </section>
 
     <section class="portfolio-philosophy">
-        <h2 class="portfolio-philosophy-header">Design Philosophy</h2>
         <div class="portfolio-philosophy-row">
             <div class="portfolio-philsophy-column">
+                <h2 class="portfolio-philosophy-header">Design Philosophy</h2>
                 <p class="portfolio-philosophy-blurb"><span class="portfolio-philosophy-blurb-emphasis">I strive to create design work based on data,</span> not feelings. Research-based design principles make the foundation on which I shape my designs. I look to qualititave data gathered from user research and testing to inform design decisions. I rely on team members with domain expertise for insight into their field. When possible, I use quantitative data from user tracking, analytics, and a/b testing to analyze existing designs.</p>
                 <p class="portfolio-philosophy-blurb">Prior to my design career, I worked as a Speech-Language Pathologist in healthcare for almost three years. I know the value of collaboration and empathy, and I've had years of experience learning the nuances of effective communication.</p>
             </div>
