Lots of work on portfolio page, changes to footer, addition of marketing page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">ABOUT</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">PORTFOLIO</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#design-philsophy">DESIGN PHILOSOPHY</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="portfolio.html">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="process.html">DESIGN PHILOSOPHY</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
@@ -31,20 +31,18 @@
     <section class="portfolio-portfolio">
         <div class="portfolio-portfolio-row">
                 <div class="portfolio-portfolio-column">
-                <button class="portfolio-icon"><a href="process.html#design-process-body" rel="portfolio-design-process">
-                    <img class="portfolio-icon-image" src="images/design-design.png" alt="design process preview" />
-                    <h2 class="portfolio-icon-title">Portfolio:<br>Selected Works</h2>
+                <button class="portfolio-icon"><a href="portfolio.html" rel="portfolio-design-process">
+                    <img class="portfolio-icon-image" src="images/portfolio-page-icon.png" alt="portfolio page link" />
                 </a></button>
             </div>
             <div class="portfolio-portfolio-column">
                 <h2 class="portfolio-portfolio-header">Portfolio</h2>
-                <p class="portfolio-portfolio-blurb">My portfolio contains pieces from my experience at education and healthcare startups as well as open source projects.</p>
+                <p class="portfolio-portfolio-blurb">View selected pieces from my experience at education and healthcare startups as well as open source projects:</p>
                 <ul class="portfolio-portfolio-list">
                     <li class="portfolio-portfolio-list-item">B2C education product design</li>
                     <li class="portfolio-portfolio-list-item">B2B healthcare clinical trial product design</li>
-                    <li class="portfolio-portfolio-list-item">Web-based applications</li>
                     <li class="portfolio-portfolio-list-item">Marketing websites and related deliverables</li>
-                    <li class="portfolio-portfolio-list-item">Open source projects</li>
+                    <li class="portfolio-portfolio-list-item">Graphic design: Logos &amp; icons</li>
                 </ul>
             </div>
         </div>
@@ -58,15 +56,14 @@
                 <p class="portfolio-philosophy-blurb">Prior to my design career, I worked as a Speech-Language Pathologist in healthcare for almost three years. I know the value of collaboration and empathy, and I've had years of experience learning the nuances of effective communication.</p>
             </div>
             <div class="portfolio-philsophy-column">
-                <button class="portfolio-icon"><a href="process.html#design-process-body" rel="portfolio-design-process">
-                    <img class="portfolio-icon-image" src="images/design-design.png" alt="design process preview" />
-                    <h2 class="portfolio-icon-title">Design Process:<br>Overview</h2>
+                <button class="portfolio-icon process-icon"><a href="process.html#design-process-body" rel="portfolio-design-process">
+                    <img class="portfolio-icon-image" src="images/process-icon.png" alt="design process link" />
                 </a></button>
             </div>
         </div>
     </section>
 
-    <section class="portfolio-body" id="portfolio">
+<!--     <section class="portfolio-body" id="portfolio">
         <div class="portfolio-row">
             <button class="portfolio-icon">
                     <img class="portfolio-icon-image" src="images/trinetx-logo.png" alt="call congress now preview" />
@@ -249,22 +246,16 @@
             </div>
         </div>
         </div>
-    </section>
+    </section> -->
 
-    <footer class="portfolio-footer" id="about">
-        <section class="portfolio-footer-about">
-            <h3 class="portfolio-footer-about-title">ABOUT ANDREA</h3>
-            <p class="portfolio-footer-about-blurb ">I am a UX/UI Designer in Cambridge, MA. Graffiti alley, picture above, is a beloved place of mine in Central Square. It is always changing, just like design.</p>
-            <p class="portfolio-footer-about-blurb ">I enjoy solving complex design problems and thrive on teamwork. I have experience with education and healthcare startups and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
-        </section>
-        <section class="portfolio-footer-contact">
+    <footer class="portfolio-footer" id="contact">
+            <h3 class="portfolio-footer-about-title">CONTACT ANDREA</h3>
+            <h5 class="portfolio-footer-email">Email me at leigh.andrea@gmail.com. <a class="portfolio-about-resume-link" href="#">Download Resume</a></h5>
             <div class="portfolio-footer-social-media">
                 <a class="portfolio-footer-social-media-icon" href="https://www.linkedin.com/in/andrea-leigh-williamson" target="_blank"><img src="images/linkedin.svg" alt="linkedin"></a>
                 <a class="portfolio-footer-social-media-icon" href="https://dribbble.com/AndreaLeigh111" target="_blank"><img src="images/dribbble.svg" alt="dribbble"></a>
                 <a class="portfolio-footer-social-media-icon" href="https://github.com/andrealeigh" target="_blank"><img src="images/github.svg" alt="github"></a>
             </div>
-            <h5 class="portfolio-footer-email">leigh.andrea@gmail.com</h5>
-        </section>
     </footer>
 
     <script src="js/smooth-scroll.min.js"></script>
