--- a/marketing.html
+++ b/marketing.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css' />
-    <title>Portfolio</title>
+    <title>Andrea&rsquo;s Portfolio</title>
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/stylesheet.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="images/portfolio-icon.png" />
@@ -16,16 +16,15 @@
     <nav class="portfolio-nav home-nav">
         <h1 class="portfolio-nav-name">Andrea Leigh Williamson</h1>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html">ABOUT</a>
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#portfolio">PORTFOLIO</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#about">ABOUT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="portfolio.html">PORTFOLIO</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="process.html">DESIGN PHILOSOPHY</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
         </div>
     </nav>
 
-    <section id="portfolio" class="portfolio-about">
-        <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">My portfolio</span> contains selected pieces from my design experience.</p>
-        <p class="portfolio-about-blurb">Click on the images to explore each piece.</p>
+    <section class="portfolio-about">
+        <p class="portfolio-about-blurb"><span class="portfolio-about-blurb-emphasis">Here is a collection of marketing deliverables</span> I created for Testive. Inc.</p>
     </section>
 
     <section class="portfolio-trinetx">
@@ -93,51 +92,6 @@
         </div>
     </section>
 
-    <section class="portfolio-call-congress">
-        <div class="portfolio-piece-row">
-            <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">Open Source Project: Call Congress Now</h2>
-                <p class="portfolio-piece-blurb">Call Congress Now is a responsive web app I designed and co-developed. Its purpose is to encourage citizens to call their Representatives and Senators for issues they care about. The app provides calling information in a user-friendly way.</p>
-                <p class="portfolio-piece-blurb">Call Congress Now was a challenging but rewarding app to design and build. I have included key points in the design process:</p>
-                <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Discovery phase</li>
-                    <li class="portfolio-piece-list-item">Defining the idea: User personas and storyboarding</li>
-                    <li class="portfolio-piece-list-item">User research</li>
-                    <li class="portfolio-piece-list-item">Design phase</li>
-                    <li class="portfolio-piece-list-item">Development &amp; testing</li>
-                    <li class="portfolio-piece-list-item">Anaylsis &amp; next steps</li>
-                </ul>
-            </div>
-            <div class="portfolio-piece-column">
-                <div class="portfolio-piece-icon"><a href="#">
-                    <img class="portfolio-piece-icon-image" src="images/call-congress-icon.png" alt="call congress now" />
-                </a></div>
-            </div>
-        </div>
-    </section>
-
-    <section class="portfolio-icons">
-        <div class="portfolio-piece-row">
-            <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="#">
-                    <img class="portfolio-piece-icon-image" src="images/trinetx-logo.png" alt="trinetx logo" />
-                </a></button>
-            </div>
-            <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">Graphic Design: Logos and Icons</h2>
-                <p class="portfolio-piece-blurb">TriNetX is a healthcare startup. Their product is a B2B web-based application for clinical trial feasability. Their user base includes Pharma/CROs, HCOs, and in-house employees.</p>
-                <p class="portfolio-piece-blurb">I am not able to publicly share my design work, however I would be happy to present the following in a controlled interview setting:</p>
-                <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil; Balsamiq</li>
-                    <li class="portfolio-piece-list-item">High fidelity mockups: Sketch and Adobe Illustrator</li>
-                    <li class="portfolio-piece-list-item">Clickable prototypes: Invision</li>
-                    <li class="portfolio-piece-list-item">User Research and Personas</li>
-                    <li class="portfolio-piece-list-item">User/Beta Testing</li>
-                </ul>
-            </div>
-        </div>
-    </section>
-
     <footer class="portfolio-footer" id="contact">
             <h3 class="portfolio-footer-about-title">CONTACT ANDREA</h3>
             <h5 class="portfolio-footer-email">Email me at leigh.andrea@gmail.com. <a class="portfolio-about-resume-link" href="#">Download Resume</a></h5>
@@ -150,6 +104,40 @@
 
     <script src="js/smooth-scroll.min.js"></script>
     <script>smoothScroll.init();</script>
+
+    <script>
+        var modals = document.getElementsByClassName("portfolio-modal");
+
+        var defineClicks = function(modal) {
+
+            // Get the button that opens the modals in portfolio
+            var btn = modal.previousElementSibling;
+            // Get the <span> element that closes the modal
+            var span = modal.querySelector('.portfolio-modal-close-icon');
+
+            // When the user clicks the button, open the modal
+            btn.onclick = function() {
+                modal.style.display = "block";
+            }
+
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function() {
+                modal.style.display = "none";
+            }
+
+        };
+
+        for (var i = 0; i < modals.length; i++) {
+            defineClicks(modals[i]);
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+            if (event.target.className == 'portfolio-modal') {
+                event.target.style.display = "none";
+            }
+        }
+    </script>
 
 </body>
 
